package edu.fiuba.algo3.model.Item.RangoItem;

public class ItemComun extends RangoItem {

}
