package edu.fiuba.algo3.model.Item.RangoItem;

public class ItemValioso extends RangoItem {

}
